Fixed picture on mobile

--- a/Website/css/full-width-pics.css
+++ b/Website/css/full-width-pics.css
@@ -62,4 +62,9 @@ footer {
     .section-heading {
         font-size: 2em;
     }
+    .image-bg-fluid-height {
+        background: url("../img/Restaurant2img.jpg") no-repeat center center scroll;
+
+}
+
 }
